# penumbra

./: Cargo.toml  rust-toolchain.toml
crates/bench/: Cargo.toml
crates/bench/benches/: decaf377.rs
crates/core/app/: Cargo.toml
crates/core/app-tests/: Cargo.toml
crates/core/app/src/: rpc.rs
crates/core/num/src/: amount.rs
crates/crypto/proof-params/: Cargo.toml
crates/crypto/tct/src/: commitment.rs
crates/custody/src/: client.rs
crates/misc/measure/: Cargo.toml
crates/misc/measure/src/: main.rs
crates/proto/: Cargo.toml
crates/proto/src/: box_grpc_svc.rs
crates/proto/src/state/: write.rs
crates/view/: Cargo.toml
crates/view/src/: client.rs
deployments/scripts/: protobuf-codegen
proto/penumbra/penumbra/core/app/v1/: app.proto
proto/penumbra/penumbra/core/transaction/v1/: transaction.proto
tools/proto-compiler/: Cargo.toml
tools/proto-compiler/src/: main.rs
tools/summonerd/src/: main.rs
