[package]
name = "penumbra-proto-compiler"
# We don't use `{ workspace = true }` attributes, because the proto-compiler tool
# is excluded from the workspace.
authors    = ["Penumbra Labs <team@penumbralabs.xyz"]
description = "The Penumbra Protobuf Compilation Helper"
edition = "2021"
homepage   = "https://penumbra.zone"
license    = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/penumbra-zone/penumbra"
version = "0.1.0"

[dependencies]
anyhow = "1"
ibc-proto = { git = "https://github.com/permissionlessweb/ibc-proto-rs", branch = "zk-mvp" }
ics23 = { git = "https://github.com/permissionlessweb/ics23", branch = "zk-mvp" }
pbjson-build                     = "0.7.0"
pbjson-types = { package = "informalsystems-pbjson-types", git = "https://github.com/permissionlessweb/pbjson", branch = "zk-mvp" }
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
tempfile = "3"
tonic-prost-build = "0.14"
tonic-build = { version = "0.14.5" }
